--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>免费直播</title>
+	<title>免费直播[点击进入]</title>
 	<style type="text/css">
 a:link,a:visited{font-size:100px}
 a:hover,a:active{font-size:106px}
 </style>
 </head>
 <body>
-<a href="hhttp://cdn-9mnh7rrm.cn.cloudcdnv1.cn/MZAqwMXS" target="_blank">免费直播</a>
+<a href="hhttp://cdn-9mnh7rrm.cn.cloudcdnv1.cn/MZAqwMXS" target="_blank">免费直播[点击进入]</a>
 </body>
 </html>
