--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 
 <ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">免费入口[点击进入]</a> </li>
+  <li> <a href="http://alb-hdhq7t5nyrmetkusk7.cn-hangzhou.alb.aliyuncs.com/Rh4ScufX">免费入口[点击进入]</a> </li>
   
-  <li> <a href="http://hejie.nigeerhuo.com">今日推荐[点击进入]</a> </li>
+  <li> <a href="http://alb-hdhq7t5nyrmetkusk7.cn-hangzhou.alb.aliyuncs.com/Rh4ScufX>今日推荐[点击进入]</a> </li>
   
-  <li> <a href="http://hejie.nigeerhuo.com">免费直播[点击进入]</a> </li>
+  <li> <a href="http://mp.weixinbridge.com/mp/wapredirect?url=http://8.wanglj.applinzi.com?p=/LvrEb8">免费直播[点击进入]</a> </li>
 
 
 
